feat: 집결 기능 추가